tests/baselines/reference/indexer2A.errors.txt
indexer2A.ts(4,5): error TS2391: Function implementation is missing or not immediately following the declaration.


==== indexer2A.ts (1 errors) ====
    class IHeapObjectProperty { }
    class IDirectChildrenMap {
        // Decided to enforce a semicolon after declarations
        hasOwnProperty(objectId: number): boolean
        ~~~~~~~~~~~~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
        [objectId: number]: IHeapObjectProperty[]
    }
    var directChildrenMap = <IDirectChildrenMap>{}; 